2006-08-04  Johnny Jacob  <jjohnny@novell.com>

	* em-format-html-display.c : Added mnemonic for "Fi_nd" and
	"Fo_rward".
	* em-folder-browser.c : (get_view_query) : Added query for
	"messages masrked as important"
	
2006-08-02  Srinivasa Ragavan  <sragavan@novell.com>

	** Fixes bug #335241

	* mail-send-recv.c: (dialog_map), (build_dialog): Let the send receive
	dialog grow to a fixed size, before we show the scroll bar. 

2006-07-26  Alessandro Decina <alessandro@nnva.org>

	** Fix for bug #348164
	
	* em-folder-browser.c: (emfb_class_init):
	Remove the unused G_TYPE_STRING parameter from the
	account_search_activated and account_search_cleared signals.

	* mail-component.c: (disable_folder_tree), (enable_folder_tree):
	Update the callbacks to match the new signature.

2006-07-28  Sankar P  <psankar@novell.com>

	* committed on behalf of Srinivasa Ragavan <sragavan@novell.com>
	* em-icon-stream.c: (emis_fit):
	We dont scale on height if the maxheight is zero
	Fixes 335431
		
2006-07-26  Veerapuram Varadhan  <vvaradhan@novell.com>

	** Fixes bgo bug #333821 and bnc bug 181851

	* mail-folder-cache.c: (ping_store_ping): Ping store only iff
	store is online and connected.
	
2006-07-26  Arvind <sa.phoenix@gmail.com>

	** Fix for bug #274276

	* em-folder-selection-button.c: (set_contents): Localizes the folder 
	names in the filter and while importing mail

2006-07-26  Andre Klapper  <a9016009@gmx.de>

	* em-folder-browser.c: correcting a grammar bug. Fixes bug #348674.

2006-07-24  Ushveen Kaur  <kushveen@novell.com>

	** Fixes Bug #341840
	
	* mail-error.xml: button label changed for dialog ask-mark-read.

2006-07-24  Sushma Rai  <rsushma@novell.com>

	* em-account-editor.c: (emae_option_entry) : activate the mnemonic for
	text box, add an extra paramenter to the function call.
	Fixes #332282.
	Patch submitted by "Vandana Shenoy .B <shvandana@novell.com>"

2006-07-24  Sushma Rai  <rsushma@novell.com>
